[gd_scene load_steps=2 format=3 uid="uid://bvxhqobtka57o"]

[ext_resource type="Script" uid="uid://b82p5xr3p14e8" path="res://Scripts/settings.gd" id="1_4geyq"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4geyq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Labels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Mute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Options" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/Options"]
layout_mode = 2

[node name="MuteBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/Options"]
layout_mode = 2

[node name="MMButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Options/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/Options/MuteBox" to="." method="_on_mute_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MMButton" to="." method="_on_button_pressed"]
